--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,8 +4,8 @@ export(ADMM)
 export(ASSIST)
 export(CNN)
 export(Lasso)
+import(glmnet)
 import(keras)
-importFrom(glmnet,"glmnet")
 importFrom(quadprog,"solve.QP")
 importFrom(stats,"optim")
 importFrom(stats,"predict")
